# agents

./: print_paths.py  pyproject.toml
1_foundations/: 1_lab1.ipynb  4_lab4.ipynb  app.py  test.ipynb
2_openai/: 4_lab4.ipynb
2_openai_sdk/: 2_lab2_tools_agentAsTool_handoffs.ipynb  4_lab4.ipynb
3_crew/coder_self/: README.md  pyproject.toml
3_crew/coder_self/output/: code_and_output.txt
3_crew/coder_self/src/coder_self/: crew.py  main.py
3_crew/debate_self/: README.md  pyproject.toml
3_crew/debate_self/output/: decide.md  oppose.md  propose.md
3_crew/debate_self/src/debate_self/: crew.py  main.py
3_crew/debate_self/src/debate_self/config/: agents.yaml
3_crew/engineering_team_self/: README.md  pyproject.toml
3_crew/engineering_team_self/src/engineering_team_self/: crew.py  main.py
3_crew/financial_researcher_self/: README.md  pyproject.toml
3_crew/financial_researcher_self/output/: report.md
3_crew/financial_researcher_self/src/financial_researcher_self/: crew.py  main.py
3_crew/stock_picker_self/: README.md  pyproject.toml
3_crew/stock_picker_self/memory/: chroma.sqlite3  long_term_memory_storage.db
3_crew/stock_picker_self/output/: decision.md  research_report.json  trending_companies.json
3_crew/stock_picker_self/src/stock_picker_self/: crew.py  main.py
3_crew/stock_picker_self/src/stock_picker_self/tools/: push_tool.py
4_langgraph/: 1_lab1.ipynb  2_lab2.ipynb  2_lab2_memory_sql.ipynb  3_lab3_playwright.ipynb  4_lab4_structured_output_multi_agent.ipynb  memory.db-shm  memory.db-wal
