[project]
name = "coder_self"
version = "0.1.0"
description = "coder_self using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.6.1"
]

[project.scripts]
coder_self = "coder_self.main:run"
run_crew = "coder_self.main:run"
train = "coder_self.main:train"
replay = "coder_self.main:replay"
test = "coder_self.main:test"
run_with_trigger = "coder_self.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
