[project]
name = "engineering_team_self"
version = "0.1.0"
description = "engineering_team_self using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[anthropic,tools]==1.7.2",
    "gradio>=6.2.0",
]

[project.scripts]
engineering_team_self = "engineering_team_self.main:run"
run_crew = "engineering_team_self.main:run"
train = "engineering_team_self.main:train"
replay = "engineering_team_self.main:replay"
test = "engineering_team_self.main:test"
run_with_trigger = "engineering_team_self.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
