[project]
name = "financial_researcher_self"
version = "0.1.0"
description = "financial_researcher_self using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.6.1",
    "litellm>=1.0.0",
]

[project.scripts]
financial_researcher_self = "financial_researcher_self.main:run"
run_crew = "financial_researcher_self.main:run"
train = "financial_researcher_self.main:train"
replay = "financial_researcher_self.main:replay"
test = "financial_researcher_self.main:test"
run_with_trigger = "financial_researcher_self.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
